--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = Shop
 Matt Nicholls <transientvariable@gmail.com>
 :experimental: true
-:keywords: Java,Micronaut
+:keywords: Java,Reactive,Micronaut,Quarkus,GraalVM,Microservices,Serverless
 :icons: font
 :iconfont-cdn: //stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
 :sectanchors: true
@@ -18,7 +18,7 @@ endif::[]
 
 Simple client and server applications for simulating a shopping cart. The server is built using link:https://micronaut.io/[Micronaut]. The client uses the new link:https://openjdk.java.net/groups/net/httpclient/[HTTP Client] library introduced in Java 11.
 
-NOTE: Orginally, the scaffolding for the server was generated using the link:https://github.com/jhipster/generator-jhipster-micronaut[JHipster generator for Micronaut], but opted for the more lightweight vanilla Micronaut.
+NOTE: Orginally, the scaffolding for the server was generated using the link:https://github.com/jhipster/generator-jhipster-micronaut[JHipster generator for Micronaut], but opted to take off the training wheels and use vanilla Micronaut.
 
 == Build and Execution
 
@@ -159,4 +159,26 @@ content-type: application/json
 ----
 ====
 
+=== Notes
 
+==== General
+
+* Initially started out with https://quarkus.io/[Quarkus] for implementing the server, but hit a hard wall when attempting use the HTTP session for state management.
+    ** Quarkus does not provide support for HTTP sessions _out-of-the-box_ and the workarounds are quite hacky at the moment ¯\_(ツ)_/¯
+
+==== Developer Experience/Ergonomics
+
+* Building a native binary using Micronaut with GraalVM is currently quite a daunting task, especially when compared to Quarkus
+    ** Took a while to figure out exactly how to build the damn thing, however as with all things, YMMV
+* Ramp up time to being productive with Micronaut is similar to that of Spring and Quarkus
+    ** Even more so when using JHipster; the framework being used is almost transparent
+    ** Using some of the more esoteric features like reactive streams is where things get interesting ಠ‿ಠ
+* For Spring veterans, transitioning to Micronaut might be a more _familiar_ experience
+    ** Quarkus too to a degree, but it is definitely not batteries included like Spring and Micronaut - which is basically the point of a microservice right?
+
+==== Brainstorming/TODOs
+
+* Deployment of server as a serverless application on Cloudflare or AWS
+* Comparing the DevEx of building native binaries of the server between GraalVM and WebAssembly
+    ** Possibly a Rust version of the server using Actix compiled to WASM as a control?
+* Performance comparison between a native binary of the server built with GraalVM and WebAssembly
